Added Stokes support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,28 @@ IF(CMAKE_SYSTEM_NAME=Windows)
 ENDIF(CMAKE_SYSTEM_NAME=Windows)
 
 SET(CMAKE_CXX_COMPILER "c++")
-SET(CMAKE_CXX_FLAGS "-std=c++17 -g -Wall -Wno-maybe-uninitialized")
-SET(CMAKE_CXX_FLAGS_DEBUGALL "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined -pthread" )
-SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O3 -DOPTIMIZE -pthread" ${ADDITIONAL_FLAGS} )
-SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -DOPTIMIZE -pthread" ${ADDITIONAL_FLAGS} )
-SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} -O3 -g -DNDEBUG -DOPTIMIZE -pthread" ${ADDITIONAL_FLAGS} )
+# CMake fails try_compile the first time it is called without it (or if CMakeCache.txt is deleted)
+set(HOME_DIR ${CMAKE_HOME_DIRECTORY} CACHE INTERNAL "")
+TRY_COMPILE(COMPILER_SUPPORTS_CXX20 ${HOME_DIR}/CMake ${HOME_DIR}/CMake/concepts.cpp COMPILE_DEFINITIONS "-std=c++20")
+if(COMPILER_SUPPORTS_CXX20)
+  SET(CMAKE_CXX_FLAGS "-std=c++20")
+  MESSAGE(STATUS "Using std c++20 extensions")
+else()
+  SET(CMAKE_CXX_FLAGS "-std=c++17")
+  MESSAGE(STATUS "Not using std c++20 extensions")
+endif()
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wpedantic")# -Wconversion")
+SET(CMAKE_CXX_FLAGS_DEBUGALL "${CMAKE_CXX_FLAGS} -g -fsanitize=address,undefined -pthread" )
+SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O3 -g -DOPTIMIZE -pthread" ${ADDITIONAL_FLAGS} )
+SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG -DOPTIMIZE -pthread -march=native" ${ADDITIONAL_FLAGS} )
+SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} -O3 -g -DNDEBUG -DOPTIMIZE -pthread -march=native" ${ADDITIONAL_FLAGS} )
 
 #SET(CMAKE_BUILD_TYPE Debug)
+#SET(CMAKE_BUILD_TYPE DebugAll)
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build: Debug Release RelWithDebInfo" FORCE)
 ENDIF(NOT CMAKE_BUILD_TYPE)
+MESSAGE(STATUS "Build type ${CMAKE_BUILD_TYPE}")
 
 #------------------------------------------------------------------------------#
 #                             Required libraries
@@ -47,6 +59,7 @@ INCLUDE_DIRECTORIES(src/Common)
 INCLUDE_DIRECTORIES(src/HybridCore)
 INCLUDE_DIRECTORIES(src/Plot)
 INCLUDE_DIRECTORIES(src/DDRCore)
+INCLUDE_DIRECTORIES(src/StokesCore)
 
 ADD_SUBDIRECTORY(src/Mesh)
 ADD_SUBDIRECTORY(src/Quadrature)
@@ -54,6 +67,7 @@ ADD_SUBDIRECTORY(src/Common)
 ADD_SUBDIRECTORY(src/HybridCore)
 ADD_SUBDIRECTORY(src/Plot)
 ADD_SUBDIRECTORY(src/DDRCore)
+ADD_SUBDIRECTORY(src/StokesCore)
 
 #------------------------------------------------------------------------------#
 #                             Directories for schemes
@@ -61,4 +75,8 @@ ADD_SUBDIRECTORY(src/DDRCore)
 
 INCLUDE_DIRECTORIES(Schemes)
 ADD_SUBDIRECTORY(Schemes)
+
+ADD_SUBDIRECTORY(runs/Stokes)
+
+ADD_SUBDIRECTORY(Schemes/Stokes)
 
